# min-contracts

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  general-issue.md
.github/workflows/: cmake.yml  linux.yml  macos.yml  windows.yml
doc/: mincontracts.md
include/: mincontracts.hpp
include/mincontracts/: mincontracts.hpp
src/: CMakeLists.txt  mincontracts.cpp
test/: CMakeLists.txt  assertions.cpp  postconditions.cpp  preconditions.cpp
